syntax = "proto3";
import "google/protobuf/wrappers.proto";

package Ps.protobuf;

/*
    A standard authorization request authorizing based on some permission(s).
*/
service GrpcPermissionAuthorize {
    rpc Authorize(GrpcPermissionAuthorizeRequest) returns(GrpcAuthorizeDecision);
}

enum failureReason {
    UNAUTHORIZED = 0; // The user does not have the required permissions
    PERMISSIONFORMAT = 2; // The permissions passed were unsuccessfully parsed
};

message GrpcPermissionAuthorizeRequest {
    string userId = 1;
    repeated google.protobuf.StringValue perms = 3; // Collection of strings representing permissions
}

/*
    Contains whether the specified user is authorized to perform or access the action associated
    with the given permissions.
*/
message GrpcAuthorizeDecision {
    bool allowed = 1;
    failureReason failureReason = 2;
    google.protobuf.StringValue failureMessage = 3; // Optional error message
}